# WinOptimizer

./: .gitignore  LICENSE  README.md  launch.ps1  package-lock.json  package.json
.github/workflows/: ci.yml
backend/: package.json
backend/profiles/: aggressive.json  balanced.json  minimal.json
backend/scripts/: _Common.ps1
backend/scripts/backup/: Ensure-FirstRunSafety.ps1  Export-SystemState.ps1  Import-RegFile.ps1  List-Backups.ps1  New-Checkpoint.ps1  Restore-Registry.ps1  Test-Admin.ps1
backend/scripts/bloatware/: Get-InstalledApps.ps1  Remove-Apps.ps1
backend/scripts/network/: Block-TelemetryHosts.ps1  Restore-Dns.ps1  Set-DnsCloudflare.ps1  Set-DnsQuad9.ps1
backend/scripts/performance/: Clear-TempFiles.ps1  Disable-StartupApps.ps1  Set-PowerHighPerformance.ps1  Set-VisualEffectsPerformance.ps1
backend/scripts/privacy/: Disable-ActivityHistory.ps1  Disable-AdvertisingId.ps1  Disable-Cortana.ps1  Disable-Feedback.ps1  Disable-LocationTracking.ps1  Disable-Telemetry.ps1
backend/scripts/services/: Disable-Services.ps1  Get-Services.ps1
backend/src/: psRunner.js  server.js
backend/src/routes/: backup.js  bloatware.js  firstRun.js  network.js  performance.js  privacy.js  profiles.js  services.js
docs/: PACKAGING.md
frontend/: index.html  package.json  vite.config.js
frontend/src/: App.jsx  api.js  index.css
frontend/src/components/: AdminBanner.jsx  BackupPanel.jsx  Card.jsx  FirstRunGate.jsx  LogsPanel.jsx  ModulePanel.jsx  (+3 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
